--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]+(-[А-ЯЁ][а-яё]*)?" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="[a-zA-Z][a-z0-9-]*@[a-z0-9-]+(\.[a-z]+)?\.[a-z]+" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[a-zA-Z]([a-z0-9][_-]?)*@[a-z0-9-]+(\.[a-z]+)*\.[a-z]+" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+?[0-9]\s?(\([0-9]{3}\)|[0-9]{3})\s?-?[0-9]{3}\s?-?[0-9]{2}\s?-?[0-9]{2}" minlength="11" maxlength="18"  required/>
+                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+?[0-9](\([0-9]{3}\)\s?[0-9]{3}?-[0-9]{2}-[0-9]{2}|\s[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}|[0-9]{10})" minlength="11" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="https?://([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}|(www\.)?[a-z0-9-]+\.[a-z]+)(:[0-9]{2,5})?[a-z0-9\/]*#?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="https?:\/\/([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}|(www\.)?[a-z0-9-]+(\.[a-z]+)+\/?)(:[0-9]{2,5}\/?)?((\/?[a-z0-9]+\/?)*|(?!\/)\/)#?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
